[Home]

Summary:ASTERISK-29188: null media causing the Asterisk crash
Reporter:sungtae kim (pchero)Labels:
Date Opened:2020-11-30 19:23:50.000-0600Date Closed:2021-01-06 18:22:53.000-0600
Priority:MinorRegression?
Status:Closed/CompleteComponents:Resources/res_ari_channels
Versions:18.1.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:Sending a /channel/<channel_id>/play request with 'media: null' causing the Asterisk crash.

{noformat}
curl --location --request POST '127.0.0.1:8088/ari/channels/test_channel/play' \
--header 'Authorization: Basic YXN0ZXJptestYXN0ZXJpc2s=' \
--header 'Content-Type: application/json' \
--data-raw '{
"playbackId": "instance-asterisk-production-europe-west4-a-0-1598390087.34227",
"media": null
}'
{noformat}

{noformat}
#0  0x00007fd0f1cb4181 in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007fd0ed354efb in stasis_app_control_play_uri (control=0x7fd0d40038b0, media=0x555c4d484280, media_count=1, language=0x555c4d47a0cc "en",
   target_id=0x555c4d4761da "c55af561-3e5e-47b3-9916-276948766da9", target_type=STASIS_PLAYBACK_TARGET_CHANNEL, skipms=0, offsetms=0,
   id=0x555c4d2de0d0 "a58b7881-37de-4baa-a7a0-a20e11271db0") at res_stasis_playback.c:492
#2  0x00007fd0ed170b86 in ari_channels_handle_play (args_channel_id=0x555c4d4761da "c55af561-3e5e-47b3-9916-276948766da9", args_media=0x555c4d484280, args_media_count=1,
   args_lang=0x0, args_offsetms=0, args_skipms=0, args_playback_id=0x555c4d2de0d0 "a58b7881-37de-4baa-a7a0-a20e11271db0", response=0x7fd0cd42ab20) at ari/resource_channels.c:689
#3  0x00007fd0ed170e20 in ast_ari_channels_play (headers=0x555c4d474a20, args=0x7fd0cd42a8e0, response=0x7fd0cd42ab20) at ari/resource_channels.c:722
#4  0x00007fd0ed16d217 in ast_ari_channels_play_cb (ser=0x7fd0d80115f0, get_params=0x0, path_vars=0x555c4d476160, headers=0x555c4d474a20, body=0x555c4d47bd60, response=0x7fd0cd42ab20)
   at res_ari_channels.c:1941
#5  0x00007fd0ed27d1ff in ast_ari_invoke (ser=0x7fd0d80115f0, uri=0x7fd0cd42acaa "channels/c55af561-3e5e-47b3-9916-276948766da9/play", method=AST_HTTP_POST, get_params=0x0,
   headers=0x555c4d474a20, body=0x555c4d47bd60, response=0x7fd0cd42ab20) at res_ari.c:587
#6  0x00007fd0ed27e7e3 in ast_ari_callback (ser=0x7fd0d80115f0, urih=0x7fd0ed28a3e0 <http_uri>, uri=0x7fd0cd42acaa "channels/c55af561-3e5e-47b3-9916-276948766da9/play",
   method=AST_HTTP_POST, get_params=0x0, headers=0x555c4d474a20) at res_ari.c:1058
#7  0x0000555c4a7d69ab in handle_uri (ser=0x7fd0d80115f0, uri=0x7fd0cd42acaa "channels/c55af561-3e5e-47b3-9916-276948766da9/play", method=AST_HTTP_POST, headers=0x555c4d474a20)
   at http.c:1487
#8  0x0000555c4a7d79ab in httpd_process_request (ser=0x7fd0d80115f0) at http.c:1928
#9  0x0000555c4a7d7cc1 in httpd_helper_thread (data=0x7fd0d80115f0) at http.c:1991
#10 0x0000555c4a77c2f4 in handle_tcptls_connection (data=0x7fd0d80115f0) at tcptls.c:274
#11 0x0000555c4a78e170 in dummy_start (data=0x7fd0d8003510) at utils.c:1299
#12 0x00007fd0f21bdfa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#13 0x00007fd0f1c514cf in clone () from /lib/x86_64-linux-gnu/libc.so.6
{noformat}
Comments:By: Asterisk Team (asteriskteam) 2020-11-30 19:23:51.676-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/].